# rdkc-tools-tdkc

./: CONTRIBUTING.md  Makefile.am  NOTICE  configure.ac  tdk.service
SystemUtil_tdkc_stub/: Makefile.am
SystemUtil_tdkc_stub/include/: SystemUtil_tdkc_stub.h
SystemUtil_tdkc_stub/src/: SystemUtil_tdkc_stub.cpp
agent/: Makefile.am
agent/include/: rdktestagentintf.h  rdkteststubintf.h  rpcmethods.h
agent/scripts/: PerformanceDataExtractor.sh  PushLogs.sh  RemoveLogs.sh  TDK_version.txt  file_copy.sh  runSysStat.sh  updateNetworkConfig.sh  updateRMSConf.sh
agent/src/: agentmain.cpp  rpcmethods.cpp  tdk_cmd_utility.cpp
moduleXML/: systemutil_tdkc-module.xml
testscripts/RDKC/component/systemutil_tdkc/: systemutil_tdkc.xml  sysutil_CheckNetworkConfig_Persistent_AfterReboot.py  sysutil_CheckWifiConnection_AfterReboot.py  sysutil_IsCameraDeviceDetected.py  sysutil_IsCameraDeviceStreaming.py  sysutil_IsEvoStreammsActive.py  sysutil_IsMediaStreamerActive.py  sysutil_IsPipewireActive.py  sysutil_IsRDKCMediaserverActive.py  sysutil_IsV4L2ModuleEnabled.py  sysutil_WEBUI_WEBRTCDemo_IsUIAccessible.py  sysutil_WEBUI_WEBRTCDemo_LiveStreamMultiBrowser.py  sysutil_WEBUI_WEBRTCDemo_LiveStreamPlay.py  sysutil_WEBUI_WEBRTCDemo_LiveStreamPlayBack.py
